cache-control & error_page 404 redirect

--- a/trainee_frontend/default.conf
+++ b/trainee_frontend/default.conf
@@ -26,9 +26,23 @@ server{
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
+        
+        # cache-control header
+        # add_header Cache-Control no-store;     # NO-STORE
+        # add_header Cache-Control max-age=120;  # MAX-AGE   # learning about max-age header, here 120 is in seconds;
+        # add_header Cache-Control s-maxage=200;  # S-MAXAGE
+        add_header Cache-Control no-cache;
+        #add_header Cache-Control must-revalidate;
     }
     location /api/ {
         proxy_pass http://trainee_backend:8000;
         proxy_set_header Host $host;
+    }
+
+    #error_page 404 = /;
+    error_page 304 = /error;
+    error_page 404 = /error;
+    location /error {
+        return http://localhost:3000;
     }
 }
