--- a/trainee_frontend/default.conf
+++ b/trainee_frontend/default.conf
@@ -22,10 +22,10 @@
 server{
     listen 80;
 
-    location / {
+    # location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri $uri/ /index.html;
+        # try_files $uri $uri/ /index.html;
         
         # cache-control header
         # add_header Cache-Control no-store;     # NO-STORE
@@ -33,16 +33,22 @@ server{
         # add_header Cache-Control s-maxage=200;  # S-MAXAGE
         add_header Cache-Control no-cache;
         #add_header Cache-Control must-revalidate;
-    }
+    # }
     location /api/ {
         proxy_pass http://trainee_backend:8000;
         proxy_set_header Host $host;
     }
 
+    error_page 404 /error;
+    error_page 304 /error;
+    # location / {
+    #     try_files $uri $uri/ =404;
+    # }
+
     #error_page 404 = /;
-    error_page 304 = /error;
-    error_page 404 = /error;
+    # error_page 304 = /error;
+    # error_page 404 = /error;
     location /error {
-        return http://localhost:3000;
+        return http://localhost:80;
     }
 }
