--- a/docker-compose.load.yml
+++ b/docker-compose.load.yml
@@ -155,6 +155,7 @@ services:
       - mern_2
       - mern_1
     mem_limit: 300m
+    cpus: '0.1'
     depends_on:
       - mongodb
     
@@ -169,8 +170,12 @@ services:
     restart: always
     ports:
       - 80:80
+      - 443:443
     networks:
       - mern_1
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/ssl/:/etc/nginx/ssl
     depends_on:
       - trainee_backend
 
