--- a/trainee_frontend/Dockerfile.dev
+++ b/trainee_frontend/Dockerfile.dev
@@ -33,7 +33,7 @@ FROM nginx:1.23-alpine
 
 WORKDIR /usr/share/nginx/html
 
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+# COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build /trainee_frontend_build_dev/build .
 
