--- a/trainee_frontend/default.conf
+++ b/trainee_frontend/default.conf
@@ -22,7 +22,7 @@
 server{
     listen 80;
 
-    # location / {
+    location / {
         root /usr/share/nginx/html;
         index index.html;
         # try_files $uri $uri/ /index.html;
@@ -33,7 +33,7 @@ server{
         # add_header Cache-Control s-maxage=200;  # S-MAXAGE
         add_header Cache-Control no-cache;
         #add_header Cache-Control must-revalidate;
-    # }
+    }
     location /api/ {
         proxy_pass http://trainee_backend:8000;
         proxy_set_header Host $host;
