updated code for SSL

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,7 +22,9 @@
 server{
     listen 80;
     server_name jayraj.docker www.jayraj.docker;
-    return 301 https://$server_name$request_uri;
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
     # location / {
     #     root /usr/share/nginx/html;
     #     index index.html;
@@ -74,6 +76,7 @@ server {
     error_page 304 /error;
     
     location /error {
-        return http://jayraj.docker:80;
+        #return http://jayraj.docker:80;
+        return 301 https://$server_name;
     }
 }
