--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,26 +21,26 @@
 
 server{
     listen 80;
-    server_name localhost;
-    # location / {
-    #     # return 301 https://$server_name$request_uri;
-    # }
+    server_name jayraj.docker www.jayraj.docker;
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        # try_files $uri $uri/ /index.html;
+         return 301 https://$server_name$request_uri;
+    }
+    # location / {
+    #       root /usr/share/nginx/html;
+    #     index index.html;
+    #     # try_files $uri $uri/ /index.html;
         
-        # cache-control header
-        # add_header Cache-Control no-store;     # NO-STORE
-        # add_header Cache-Control max-age=120;  # MAX-AGE   # learning about max-age header, here 120 is in seconds;
-        # add_header Cache-Control s-maxage=200;  # S-MAXAGE
-        add_header Cache-Control no-cache;
-        #add_header Cache-Control must-revalidate;
-    }
-    location /api/ {
-        proxy_pass http://trainee_backend:8000;
-        proxy_set_header Host $host;
-    }
+    #     # cache-control header
+    #     # add_header Cache-Control no-store;     # NO-STORE
+    #     # add_header Cache-Control max-age=120;  # MAX-AGE   # learning about max-age header, here 120 is in seconds;
+    #     # add_header Cache-Control s-maxage=200;  # S-MAXAGE
+    #     add_header Cache-Control no-cache;
+    #     #add_header Cache-Control must-revalidate;
+    # }
+    # location /api/ {
+    #     proxy_pass http://trainee_backend:8000;
+    #     proxy_set_header Host $host;
+    # }
 
     # error_page 404 /error;
     # error_page 304 /error;
@@ -58,23 +58,29 @@ server{
 
 server {
     listen 443 ssl;
-    server_name jayraj.docker localhost;
+    server_name jayraj.docker www.jayraj.docker;
 
     ssl_certificate ./ssl/jayraj.docker.crt;
     ssl_certificate_key ./ssl/jayraj.docker.key;
 
-   
+    location / {
         root /usr/share/nginx/html;
         index index.html;
-    
-    # location /index.html
+    }
+
+    # redirect index.html to home page
+    if ($request_uri ~ "^(.*/)index\.(html)$") {
+        return 301 $1; 
+    }
+
+    # rewrite ^(/.*[^/])$ $1/ permanent;
+
     location /api/ {
         proxy_pass http://trainee_backend:8000;
         proxy_set_header Host $host;
     }
-
-    # error_page 404 /error;
-    # error_page 304 /error;
+    
+    error_page 404 /error;
     
     location /error {
         #return http://jayraj.docker:80;
